--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
         const message = formData.get('message');
 
         // Send data to n8n webhook
-        fetch('https://flat-shirts-read.loca.lt', {
+        fetch('https://easy-guests-shout.loca.lt', {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify({ name, email, phone, business, message })
